# pinescript-to-python

./: .copilot.json  .gitignore  BTC_IMPLEMENTATION_SUMMARY.md  FINAL_REPORT.md  IMPLEMENTATION_SUMMARY.md  README.md  REORGANIZATION.md  __init__.py  btc_data_generator.py  btc_demo_results.db  btc_strategy_detailed.csv  btc_strategy_summary.txt  comprehensive_demo.py  debug_signals.py  demo.py  demo_scheduler.json  demo_test.db  integration_demo.db  integration_demo_report.txt  main_demo.py  optimized_btc_demo.py  pyproject.toml  requirements.txt  simple_demo.py  test_btc_fix.py  working_demo.py
analysis/: __init__.py  dashboard.py  database_manager.py  report_generator.py  scheduler.py
backtesting/: __init__.py  backtest_config.py  backtesting_engine.py  performance_metrics.py  timeframe_manager.py
indicators/: __init__.py  base.py  calculator.py  momentum.py  moving_averages.py  trend.py  volatility.py
models/: __init__.py  strategy_params.py  trade_result.py
optimization/: __init__.py  optimization_config.py  optimization_engine.py  optimization_results.py  stock_data_manager.py
pinescripts/: Momentum Long + Short Strategy.pinescript
signals/: __init__.py  signal_generator.py
strategy/: Momentum Long + Short Strategy.py  __init__.py  momentum_strategy.py
tests/: test_momentum_strategy.py
trading/: __init__.py  trade_simulator.py
